--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "An instant messaging api",
   "main": "dist/main.js",
   "dependencies": {
+    "@types/node": "^10.11.7",
     "express": "^4.16.3",
-    "socket.io": "^2.1.1"
+    "mysql": "^2.16.0",
+    "reflect-metadata": "^0.1.12",
+    "socket.io": "^2.1.1",
+    "typeorm": "^0.2.7"
   },
   "devDependencies": {},
   "scripts": {
