--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
 		"target": "es6",
 		"module": "commonjs",
 		"outDir": "dist",
-		"sourceMap": true
+		"sourceMap": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
 	},
 	"include": [
 		"src/**/*.ts"
-	]
+	],
 }
