--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/main.js",
 	"dependencies": {
 		"@types/node": "^10.11.7",
+		"body-parser": "^1.18.3",
 		"express": "^4.16.3",
 		"mysql": "^2.16.0",
 		"reflect-metadata": "^0.1.12",
